--- a/src/vistaControl/ParqueoPublico.fxml
+++ b/src/vistaControl/ParqueoPublico.fxml
@@ -34,4 +34,8 @@
 		<!-- To add lines -->
       <Label text="Valor a Pagar" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
    </children>
+   <Label text="Vehículo" GridPane.halignment="CENTER" />
+      <Label text="Hora de Inicio" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+      <Label text="Hora Final" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+   
 </GridPane>
